--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="mcm.edu.ph.group6_decisionbasedgame">
 
+    <uses-permission
+        android:name="android.permission.WRITE_SETTINGS"
+        tools:ignore="ProtectedPermissions" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,52 +16,49 @@
         <activity
             android:name=".View.Page7"
             android:exported="false"
-            android:theme="@style/SplashTheme"
-            android:launchMode="singleInstance"
             android:screenOrientation="landscape" />
         <activity
             android:name=".View.Page6"
             android:exported="false"
-            android:theme="@style/SplashTheme"
-            android:launchMode="singleInstance"
             android:screenOrientation="landscape" />
         <activity
             android:name=".View.Page5"
             android:exported="false"
-            android:theme="@style/SplashTheme"
-            android:launchMode="singleInstance"
             android:screenOrientation="landscape" />
         <activity
             android:name=".View.Page4"
             android:exported="false"
-            android:theme="@style/SplashTheme"
-            android:launchMode="singleInstance"
             android:screenOrientation="landscape" />
         <activity
             android:name=".View.Page3"
             android:exported="false"
-            android:theme="@style/SplashTheme"
-            android:launchMode="singleInstance"
             android:screenOrientation="landscape" />
         <activity
             android:name=".View.Page2"
             android:exported="false"
-            android:theme="@style/SplashTheme"
-            android:launchMode="singleInstance"
             android:screenOrientation="landscape" />
-        <service
-            android:name=".Controller.MediaPlayerService"
-            android:enabled="true" />
         <activity
             android:name=".View.Page1"
             android:exported="false"
-            android:theme="@style/SplashTheme"
-            android:launchMode="singleInstance"
             android:screenOrientation="landscape" />
         <activity
             android:name=".View.IntroScreen"
             android:exported="true"
-            android:theme="@style/SplashTheme"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".View.SettingsScreen"
+            android:exported="true"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".View.HomeScreen"
+            android:exported="true"
+            android:screenOrientation="landscape" />
+        <service
+            android:name=".Controller.MusicPlayerService"
+            android:enabled="true" />
+        <activity
+            android:name=".View.SplashScreen"
+            android:exported="true"
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
